cmake_minimum_required (VERSION 2.6)
PROJECT(Tiered-Storage)

SET (CMAKE_CXX_COMPILER /usr/bin/g++)

SET(CMAKE_CXX_FLAGS_COMMON
    "-std=c++11 \
    -fPIC")
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    ${CMAKE_CXX_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    ${CMAKE_CXX_FLAGS_COMMON} \
    -O3")

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules/)

# ADD_SUBDIRECTORY(vendor/tbb)
set(TBB_INCLUDE_DIRS ${TBB_INCLUDE_DIRS})
set(TBB_LINK_DIRS ${TBB_LINK_DIRS})
set(TBB_LIBRARIES ${TBB_LIBRARIES})

# ADD_SUBDIRECTORY(vendor/boost)
set(BOOST_INCLUDE_DIRS /usr/include/boost/)
set(BOOST_LINK_DIRS /usr/lib/x86_64-linux-gnu/)
set(BOOST_THREAD_LIBRARIES ${BOOST_THREAD_LIBRARIES}/libboost_thread.so)
set(BOOST_SYSTEM_LIBRARIES ${BOOST_THREAD_LIBRARIES}/libboost_system.so)

# ADD_SUBDIRECTORY(vendor/googlebenchmark)
SET(GBENCH_INCLUDE_DIRS ${GBENCH_INCLUDE_DIRS})
SET(GBENCH_LIBS_DIR ${GBENCH_LIBS_DIR})

# ADD_SUBDIRECTORY(vendor/googletest)
set(GTEST_INCLUDE_DIRS ${GTEST_INCLUDE_DIRS})
set(GTEST_LIBS_DIR ${GTEST_LIBS_DIR})

#ADD_SUBDIRECTORY(vendor/zeromq)
find_path(ZMQ_INCLUDE_DIR zmq.h)
find_library(ZMQ_LIBRARY NAMES zmq)
set(ZEROMQ_INCLUDE_DIRS ${ZMQ_INCLUDE_DIR})
set(ZEROMQ_LINK_DIRS ${ZMQ_LIBRARY})

#ADD_SUBDIRECTORY(vendor/zeromqcpp)
find_path(ZMQCPP_INCLUDE_DIR zmq.hpp)
find_library(ZMQ_LIBRARY NAMES zmq)
set(ZEROMQCPP_INCLUDE_DIRS ${ZMQCPP_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GBENCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${TBB_INCLUDE_DIRS})

LINK_DIRECTORIES(${BOOST_LINK_DIRS})
LINK_DIRECTORIES(${ZEROMQ_LINK_DIRS})
LINK_DIRECTORIES(${TBB_LINK_DIRS})

ADD_SUBDIRECTORY(kvs)
